--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,9 +17,9 @@ main:
   
   - title: "Resume"
   - url: /resume/
-  
-  - title: "CV"
-    url: /cv/
+
+  # - title: "CV"
+  #   url: /cv/
     
   # - title: "Guide"
   #   url: /markdown/
