--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,12 +14,9 @@ main:
         
   # - title: "Blog Posts"
   #   url: /year-archive/
-  
-  - title: "Resume"
-  - url: /resume/
 
-  # - title: "CV"
-  #   url: /cv/
+  - title: "CV"
+    url: /cv/
     
   # - title: "Guide"
   #   url: /markdown/
