--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ analytics:
 author:
   name             : "Dylan Chen"
   avatar           : "profile.png"
-  bio              :  # "Your biography for the left-hand sidebar"
+  bio              : "What I cannot create, I do not understand."
   location         : "Irvine, CA"
   googlescholar    :  # "http://yourfullgooglescholarurl.com"
   email            :
