--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
   bio              : "What I cannot create, I do not understand."
   location         : "Irvine, CA"
   googlescholar    :  # "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "dylanc7 at uci dot edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
